@@ -1,4 +1,5 @@
 0.04
+ - Implement station order.
  - Rewrite XML map to new version with line IDs.
 
 0.03 2015-10-16T11:41:32+02:00
